08-operators/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: kibana
  namespace: user-00
spec:
  ingressClassName: nginx
  rules:
  - host: kib-00.labs.sass.ro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-01-kb-http
            port: 
              number: 5601
